messing with cmake continues
Finally seeing light at the end of the tunnel. *.ui file needs to be
wrapped first before adding it as an executable. Wrapping macro puts it
into build directory, so current binary directory must be included for
ui_*h file to be found.

qt5_use_modules works only with newer version of cmake. Still working on
getting it to work with cmake under 2.8.8

Building under Windows is a whole different story.

--- a/src/GUI/BoardSample.ui
+++ b/src/GUI/BoardSample.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>BoardSample</class>
  <widget class="QWidget" name="BoardSample">
   <property name="geometry">
@@ -15,7 +13,20 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>90</y>
+     <width>141</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hello QtWidget</string>
+   </property>
+  </widget>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
