--- a/src/MainWindowSample.ui
+++ b/src/MainWindowSample.ui
@@ -49,6 +49,16 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>281</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
