--- a/src/gui/MainWindowSample.ui
+++ b/src/gui/MainWindowSample.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>715</width>
-    <height>477</height>
+    <width>998</width>
+    <height>581</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,14 +23,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-      </widget>
+      <widget class="QGraphicsView" name="graphicsView"/>
      </item>
      <item>
       <widget class="QLineEdit" name="lineEdit"/>
